--- a/code/css/nuage.css
+++ b/code/css/nuage.css
@@ -1,9 +1,3 @@
-body {
-    background-image: url(../images/background1.png);
-    background-size: 1920px 1080px;
-}
-
-
 #b{
     position:absolute;
     top: 40px;
@@ -16,7 +10,7 @@ body {
 .gouteDeau{
     right: 40%;
     position: absolute;
-    background: url("../images/Goutte_d'eau.png");
+    background: url("../../images/Goutte_d'eau.png");
     background-size: 32px;
     background-position: center;
     background-repeat: no-repeat;
