--- a/code/css/reservoir.css
+++ b/code/css/reservoir.css
@@ -4,7 +4,7 @@ body {
     background-repeat: no-repeat;
 }
 
-#recipient {
+#reservoir {
     margin-top: 25%;
     margin-left: 45%;
     width: 200px;
