--- a/code/css/style.css
+++ b/code/css/style.css
@@ -28,3 +28,10 @@
     border: 1px solid red;
     border-radius: 100px / 70px;
 }
+
+#animVillager {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    background: red;
+  }
